--- a/src/main/resources/templates/add_operation.html
+++ b/src/main/resources/templates/add_operation.html
@@ -24,11 +24,11 @@
         <input type="text" th:field="*{name}" required><br/>
         <p>Время выполнения операции</p>
         <div class="time_container">
-            <p class="time"><input type="number" min="0" th:field="*{hours}" value="0" required>ч. </p>
-            <p class="time"><input type="number" min="0" th:field="*{minutes}" value="0" required>мин. </p><br/>
+            <p class="time"><input type="number" min="0" th:field="*{hours}" value="0" required> ч. </p>
+            <p class="time"><input type="number" min="0" max="59" th:field="*{minutes}" value="0" required> мин. </p><br/>
         </div>
     </div>
-    <input class="btn" type="submit" value="Сохранить"/>
+    <input class="btn" type="submit" value="Сохранить" />
 </form>
 </body>
 </html>
