--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -15,7 +15,7 @@
 <header th:insert="blocks/header::header"></header>
 <div class="search">
     <form action="/employees/search" method="get">
-        <p><input type="search" name="email" placeholder="" class="search__form">
+        <p><input type="search" name="email" placeholder="Введите email" class="search__form">
             <input type="submit" value="" class="search_button">
         </p>
     </form>
