--- a/src/main/resources/templates/edit_product.html
+++ b/src/main/resources/templates/edit_product.html
@@ -15,43 +15,76 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div th:object="${product}">
-<form th:action="'/products/' + ${product.id}" method="post" class="form">
-    <div class="data">
-        <p>Тип:
-            <select th:field="*{type}" id="type" th:value="${product.type}">
+    <form th:action="'/products/' + ${product.id}" method="post" class="form">
+        <div class="data">
+            <p>Тип:
+                <select th:field="*{type}" id="type" th:value="${product.type}">
+                    <option value="">Выберите тип изделия</option>
+                    <option th:value="'Карандаш'">Карандаш</option>
+                    <option th:value="'Ручка'">Ручка</option>
+                </select>
+            </p>
+            <p>Модель:
+                <select th:field="*{model}" th:value="${product.model}" id="model">
+                    <option value="">Выберите тип изделия</option>
+                </select>
+            </p>
+            <select th:field="*{property}" th:value="${product.property}" id="property">
                 <option value="">Выберите тип изделия</option>
-                <option th:value="'Карандаш'">Карандаш</option>
-                <option th:value="'Ручка'">Ручка</option>
             </select>
-        </p>
-        <p>Модель:
-            <select th:field="*{model}" th:value="${product.model}" id="model">
-                <option value="">Выберите тип изделия</option>
-            </select>
-        </p>
-        <select th:field="*{property}" th:value="${product.property}" id="property">
-            <option value="">Выберите тип изделия</option>
-        </select>
-        <p>Введите артикул</p>
-        <input th:field="*{article}" th:value="${product.article}" type="text" required>
-        <p>Маршрут</p>
-        <table class="operations" th:object="${operations}">
-            <tr>
-                <th>Цех</th>
-                <th>Операция</th>
-                <th>Время выполнения</th>
-                <th></th>
-            </tr>
-            <div th:each="operation : ${operations}">
+            <p>Введите артикул</p>
+            <input th:field="*{article}" th:value="${product.article}" type="text" required>
+            <p>Маршрут</p>
+            <table class="operations" th:object="${operations}">
                 <tr>
-                    <td th:text="${operation.workshop}"></td>
-                    <td th:text="${operation.name}"></td>
-                    <td th:text="${operation.hours} + ':' + ${operation.minutes}"></td>
-                    <td><input type="number" min="1" step="1" name="selectedOperationsSequencing"></td>
-                    <td><input type="checkbox" class="check" name="selectedOperations" th:value="${operation.id}"></td>
+                    <th>Цех</th>
+                    <th>Операция</th>
+                    <th>Время выполнения</th>
+                    <th>Порядок выполнения</th>
+                    <th></th>
                 </tr>
-            </div>
-        </table>
+
+                <div th:each="operation : ${operations}">
+                    <div th:each="op : ${product.getRoute().getOperationInRoutes()}">
+                        <div th:if="${operation.id==op.operation.id}">
+                            <tr>
+                                <td th:text="${operation.workshop}"></td>
+                                <td th:text="${operation.name}"></td>
+                                <td th:text="${operation.hours} + ':' + ${operation.minutes}"></td>
+                                <td>
+                                    <input type="number" min="1" step="1"
+                                           name="selectedOperationsSequencing" th:value="${op.sequencing}">
+                                </td>
+                                <td>
+                                    <input type="checkbox" class="check"
+                                           name="selectedOperations"
+                                           th:value="${operation.id}" checked>
+
+                                </td>
+
+                        </div>
+                        <div th:unless="${operation.id==op.operation.id}">
+
+
+                            <tr>
+                                <td th:text="${operation.workshop}"></td>
+                                <td th:text="${operation.name}"></td>
+                                <td th:text="${operation.hours} + ':' + ${operation.minutes}"></td>
+                                <td>
+                                    <input type="number" min="1" step="1"
+                                           name="selectedOperationsSequencing">
+                                </td>
+                                <td>
+                                    <input type="checkbox" class="check"
+                                           name="selectedOperations"
+                                           th:value="${operation.id}" >
+                                </td>
+                            </tr>
+                        </div>
+                    </div>
+                </div>
+            </table>
+        </div>
         <p>Спецификация</p>
         <table class="materials" th:object="${materials}">
             <tr>
@@ -63,12 +96,13 @@
                 <tr>
                     <td th:text="${material.name}"></td>
                     <td><input type="number" placeholder="кол-во" name="selectedMaterialsQuantity"></td>
-                    <td><input type="checkbox" class="check" name="selectedMaterials" th:value="${material.id}"></td>
+                    <td><input type="checkbox" class="check" name="selectedMaterials" th:value="${material.id}">
+                    </td>
                 </tr>
             </div>
         </table>
-    </div>
-    <input class="btn" type="submit" value="Сохранить"/>
+</div>
+<input class="btn" type="submit" value="Сохранить"/>
 </form>
 </div>
 </body>
